--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div id="comp" class="container-fluid">
+    <div id="comp" class="container-fluid p-3">
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-11 text-left">
